samples/_failures_safe/1760960484_0032e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8de52909.c: In function ‘process_event’:
./samples/SAFE/__tmp_8de52909.c:170:13: error: expected expression at end of input
  170 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_8de52909.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8de52909.c:170:13: error: expected declaration or statement at end of input
